Fix PlayStation build after 281488@main, round two https://bugs.webkit.org/show_bug.cgi?id=277393

Unreviewed build fix.

Round one (281550@main) didn't work, as the issue is not a missing header,
but rather that PlayStation can be USE(LIBWPE) && !USE(WPE_BACKEND_PLAYSTATION).

* Source/WebKit/Shared/unix/AuxiliaryProcessMain.cpp:
(WebKit::AuxiliaryProcessMainCommon::parseCommandLine):
Undo header addition and instead guard with USE(WPE_BACKEND_PLAYSTATION).

Canonical link: https://commits.webkit.org/281630@main